--- a/css/animate.css
+++ b/css/animate.css
@@ -3,8 +3,6 @@
 /*!
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
-
-Copyright (c) 2015 Daniel Eden
 */
 
 .animated {
@@ -13,7 +11,13 @@ Copyright (c) 2015 Daniel Eden
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
+.link-git{
+  color: #0d95e8;
+}
 
+.link-git:hover{
+  color: gray;
+}
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
