--- a/projects/css/demo.css
+++ b/projects/css/demo.css
@@ -57,7 +57,7 @@ a {
 	text-decoration: none;
 	padding: 3% 5%;
 	background: #de6551;
-	color: #3b393d;
+	color: #fff;
 	border-radius: 10px;
 	outline: none;
 	transition: 0.5s;
